# progetto-grafica

./: CMakeLists.txt  LICENSE  Makefile  README.md  build_make.sh
assets/ship/: bottom_body_dark_red_metal.tga  fishing_ship.mtl  rust_dirt_decal.tga  ship_catwalk.tga  ship_catwalk_ddn.tga  superstructure_base_stripe_ddn.tga  superstructure_glass.tga  superstructure_white_metal_spec.tga  superstructure_wires_spec.tga  top_body_black_metal.tga
doc/: doc.html  doc.js
lib/GCGraLib2/: GCGraLib2.c  GCGraLib2.h
lib/ShadowManager/: ShadowManager.cpp  ShadowManager.h  helper_functions.c  my_shadow_mapping.c  shadow_mapping.ini
lib/ShadowManager/shaders/: defaultPassFragShader.frag  defaultPassVertShader.vert
lib/ShadowMapper/: Makefile  ShadowMapper.cpp  ShadowMapper.h  helper_functions.h  helper_functions_old.h  my_shadow_mapping
lib/ShadowMapper/shaders/: defaultPassFragShader.glsl  defaultPassVertShader.glsl
project/: Makefile  leaderboard.txt
project/assets/ship/: antenne_metal.tga  bottom_body_dark_stripe.tga  deck_wooden_floor_ddn.tga  fishing_ship.max  readme.txt  ship_body.tga  ship_catwalk_spec.tga  ship_decals.tga  ship_details.tga  ship_details_spec.tga  ship_lights.tga  superstructure_base_stripe.tga  superstructure_base_stripe_spec.tga  superstructure_glass_spec.tga  superstructure_white_metal.tga  superstructure_white_metal_ddn.tga  superstructure_wires.tga  top_body_black_metal_spec.tga  top_body_white_metal.tga  top_body_white_metal_spec.tga
project/lib/: GLText.cpp  GLText.h  glm.cpp  glm.h
project/lib/GCGraLib2/: Makefile  README_GCGraLib2
project/lib/ShadowMapper/: ShadowMapper.cpp  ShadowMapper.h  helper_functions.c
project/lib/ShadowMapper/shaders/: defaultPassFragShader.glsl  defaultPassVertShader.glsl  shadowPassFragShader.glsl
project/src/: BoundingBox.cpp  Buoy.cpp  Camera.cpp  Enviroment.cpp  Frontier.cpp  GLText.cpp  Game.cpp  HUD.cpp  Leaderboard.cpp  Mesh.cpp  ShaderParams.cpp  Ship.cpp  ShipMesh.cpp  TextureManager.cpp  Utils.cpp  main.cpp
project/src/headers/: BoundingBox.h  Camera.h  Enviroment.h  Fog.h  Frontier.h  Game.h  HUD.h  Leaderboard.h  Mesh.h  Ship.h  Texture.h  TextureManager.h  point3.h
src/: BoundingBox.cpp  Buoy.cpp  Camera.cpp  Controller.cpp  Enviroment.cpp  Fog.cpp  Frontier.cpp  GLText.cpp  Game.cpp  HUD.cpp  Light.cpp  Mesh.cpp  Options.cpp  ShaderParams.cpp  Ship.cpp  ShipMesh.cpp  Texture.cpp  TextureManager.cpp  Utils.cpp  glm.cpp  main.cpp  texture.cpp
src/headers/: BoundingBox.h  Buoy.h  Camera.h  Controller.h  Enviroment.h  Fog.h  Frontier.h  GLText.h  Game.h  HUD.h  Light.h  Mesh.h  Options.h  ShaderParams.h  Ship.h  ShipMesh.h  Texture.h  TextureManager.h  Utils.h  glm.h  point3.h
